--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ REACT_APP_IDENTITY_CLIENT_ID=
 REACT_APP_IDENTITY_SCOPE=
 REACT_APP_IDENTITY_AUTHORITY=
 
-REACT_APP_MONGODB_LINK=mongodb+srv://stefyy47:v4z482iD18HCU2eS@cluster0.gmn33w6.mongodb.net/?retryWrites=true&w=majority
+REACT_APP_BACKEND_HOST=http://localhost:3000
