--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ REACT_APP_IDENTITY_CLIENT_ID=
 REACT_APP_IDENTITY_SCOPE=
 REACT_APP_IDENTITY_AUTHORITY=
 
-REACT_APP_BACKEND_HOST=https://react-tr-be.vercel.app
+REACT_APP_BACKEND_HOST=http://localhost:3000
